--- a/css/style.css
+++ b/css/style.css
@@ -17,10 +17,10 @@ body {
 	width: 100%;
 	height:100%;
 	font-family: 'Helvetica';
-	background: #000;
-	color: #fff;
+	background: #fff;
+	color: #000;
 	font-size: 24px;
-	text-align:center;
+	text-align:left;
 	letter-spacing:1.4px;
 
 }
@@ -33,7 +33,7 @@ body {
 	height:400px;
 }
 
-.login h1 { color: #fff; text-shadow: 0 0 10px rgba(0,0,0,0.3); letter-spacing:1px; text-align:center; }
+.login h1 { color: #000; text-shadow: 0 0 10px rgba(0,0,0,0.3); letter-spacing:1px; text-align:center; }
 
 input { 
 	width: 100%; 
@@ -43,7 +43,7 @@ input {
 	outline: none;
 	padding: 10px;
 	font-size: 13px;
-	color: #fff;
+	color: #000;
 	text-shadow: 1px 1px 1px rgba(0,0,0,0.3);
 	border: 1px solid rgba(0,0,0,0.3);
 	border-radius: 4px;
