add disabled selected

--- a/templates/index.html
+++ b/templates/index.html
@@ -3,11 +3,10 @@
 <head>
   <meta charset="UTF-8">
   <title>Organization Recommendation Engine</title>
-  
+  <link rel="stylesheet" href="static/css/style.css">
 </head>
 
 <body style="background: #ffffff;">
-<h1>Testing</h1>
  <div class="login">
 	
 
@@ -17,6 +16,7 @@
                 <label>  
                     <span>Select your area</span>  
                     <select name="area">  
+                        <option disabled selected>Area</option>
                         <option>L’Île-Bizard—Sainte-Geneviève</option>  
                         <option>Pierrefonds-Roxboro</option>  
                         <option>Saint-Laurent</option> 
@@ -41,7 +41,8 @@
               <div class="form-row">  
                 <label>  
                     <span>Select your prefered service size</span>  
-                    <select name="service">  
+                    <select name="service"> 
+                        <option disabled selected>Size</option> 
                         <option>small</option>  
                         <option>medium</option>  
                         <option>large</option>  
@@ -53,6 +54,7 @@
                 <label>  
                     <span>Select your prefered organization size</span>  
                     <select name="org">  
+                        <option disabled selected>Size</option> 
                         <option>small</option>  
                         <option>medium</option>  
                         <option>large</option>  
