--- a/static/css/style.css
+++ b/static/css/style.css
@@ -10,6 +10,12 @@
     font-size: 18px;
   
 }
+.title {
+    color: #1037a2;
+    font-family: Raleway;
+    font-weight: 800;
+    font-size: 26px;
+}
 
 .select:focus,
 .select:hover {
