--- a/templates/index.html
+++ b/templates/index.html
@@ -8,7 +8,9 @@
 
 <body style="background: #ffffff;">
  <div class="login">
-
+    <h1 class="title">
+        Find Your Ideal Organization: 
+    </h1>
      <!-- Main Input For Receiving Query to our ML -->
     <form action="{{ url_for('predict')}}"method="post">
               <div class="form-row">  
