--- a/templates/index.html
+++ b/templates/index.html
@@ -4,6 +4,7 @@
   <meta charset="UTF-8">
   <title>organization recengine</title>
   <link rel="stylesheet" type="text/css" href="../static/css/style.css">
+  <link href='https://fonts.googleapis.com/css?family=Raleway' rel='stylesheet'>
 </head>
 
 <body style="background: #ffffff;">
@@ -76,7 +77,7 @@
                 </label>  
             </div>    
 
-        <button id="btn" type="submit" class="btn btn-primary btn-block btn-large">Submit</button>
+        <button class="btn-submit" id="btn" type="submit" class="btn btn-primary btn-block btn-large">Submit</button>
     </form>
 
    <br>
