--- a/templates/index.html
+++ b/templates/index.html
@@ -7,129 +7,102 @@
 </head>
 
 <body style="background: #ffffff;">
- <div class="login">
-     <!-- Main Input For Receiving Query to our ML -->
-    <form action="{{ url_for('predict')}}"method="post">
+    <div class="login">
+        <!-- Main Input For Receiving Query to our ML -->
+        <form action="{{ url_for('predict')}}"method="post">
+            <div>
+                <div class="form-row">  
+                    <label>  
+                        <span>Select your area: </span>  
+                        <select name="area" class="select" required>  
+                            <option value="">Select</option>
+                            <option>L’Île-Bizard—Sainte-Geneviève</option>  
+                            <option>Pierrefonds-Roxboro</option>  
+                            <option>Saint-Laurent</option> 
+                            <option>Ahuntsic-Cartierville</option> 
+                            <option>Montréal-Nord</option>
+                            <option>Rivière-des-Prairies—Pointe-aux-Trembles</option> 
+                            <option>Anjou</option> 
+                            <option>Saint-Léonard</option> 
+                            <option>Villeray—Saint-Michel—Parc-Extension</option> 
+                            <option>Rosemont—La Petite-Patrie</option> 
+                            <option>Mercier—Hochelaga-Maisonneuve</option> 
+                            <option>Le Plateau-Mont-Royal</option> 
+                            <option>Outremont</option> 
+                            <option>Ville-Marie</option> 
+                            <option>Côte-des-Neiges—Notre-Dame-de-Grâce</option> 
+                            <option>Le Sud-Ouest</option> 
+                            <option>Verdun</option> 
+                            <option>LaSalle</option>   
+                        </select>  
+                    </label>  
+                </div>
+
+                <div class="form-row">
+                    <label>
+                        <span>Select your prefered service size: </span><br>
+                        <div>
+                            <input type="checkbox" name="smallService" value="smallService">
+                            <label for="smallService"> Small</label><br>
+                        </div>  
+                        <div>
+                            <input type="checkbox" name="mediumService" value="mediumService">
+                            <label for="mediumService"> Medium</label><br>
+                        </div>
+                        <div>
+                            <input type="checkbox" name="largeService" value="largeService">
+                            <label for="largeService"> Large</label><br>
+                        </div>
+                    </label>
+                </div>
+                
+                <div class="form-row">
+                    <label>
+                        <span>Select your prefered organization size: </span><br>
+                        <input type="checkbox" name="smallOrg" value="smallOrg">
+                        <label for="smallOrg"> Small</label><br>
+                        <input type="checkbox" name="mediumOrg" value="mediumOrg">
+                        <label for="mediumOrg"> Medium</label><br>
+                        <input type="checkbox" name="largeOrg" value="largeOrg">
+                        <label for="largeOrg"> Large</label><br>
+                    </label>
+                </div>
+
+                <div class="form-row">
+                    <label>
+                        <span>Select your prefered role: </span><br>
+                        <input type="checkbox" name="cook" value="cook">
+                        <label for="cook"> Cook</label><br>
+                        <input type="checkbox" name="serve" value="serve">
+                        <label for="serve"> Serve</label><br>
+                        <input type="checkbox" name="prep" value="prep">
+                        <label for="prep"> Prep</label><br>
+                        <input type="checkbox" name="clean" value="clean">
+                        <label for="clean"> Clean</label><br>
+                        <input type="checkbox" name="garden" value="garden">
+                        <label for="garden"> Garden</label><br>
+                        <input type="checkbox" name="delivery" value="delivery">
+                        <label for="delivery"> Delivery</label><br>
+                        <input type="checkbox" name="education" value="education">
+                        <label for="education"> Education</label><br>
+                        <input type="checkbox" name="warehouse" value="warehouse">
+                        <label for="warehouse"> Warehouse</label><br>
+                        <input type="checkbox" name="daycare" value="daycare">
+                        <label for="daycare"> Daycare</label><br>
+                        <input type="checkbox" name="sort" value="sort">
+                        <label for="sort"> Sort</label><br>
+                    </label>
+                </div>
+            </div>
+            <br><br><br><br><br><br><br><br>
+            <div>
+                <input id="btn" type="submit" value="Submit">
+            </div>
+        </form>
+        <br><br>
         <div>
-            <div class="form-row">  
-                <label>  
-                    <span>Select your area: </span>  
-                    <select name="area" class="select">  
-                        <option disabled selected>select</option>
-                        <option>L’Île-Bizard—Sainte-Geneviève</option>  
-                        <option>Pierrefonds-Roxboro</option>  
-                        <option>Saint-Laurent</option> 
-                        <option>Ahuntsic-Cartierville</option> 
-                        <option>Montréal-Nord</option>
-                        <option>Rivière-des-Prairies—Pointe-aux-Trembles</option> 
-                        <option>Anjou</option> 
-                        <option>Saint-Léonard</option> 
-                        <option>Villeray—Saint-Michel—Parc-Extension</option> 
-                        <option>Rosemont—La Petite-Patrie</option> 
-                        <option>Mercier—Hochelaga-Maisonneuve</option> 
-                        <option>Le Plateau-Mont-Royal</option> 
-                        <option>Outremont</option> 
-                        <option>Ville-Marie</option> 
-                        <option>Côte-des-Neiges—Notre-Dame-de-Grâce</option> 
-                        <option>Le Sud-Ouest</option> 
-                        <option>Verdun</option> 
-                        <option>LaSalle</option>   
-                    </select>  
-                </label>  
-            </div>
-
-            <div class="form-row">
-                <label>
-                    <span>Select your prefered service size: </span><br>
-                    <div>
-                        <input type="checkbox" name="smallService" value="smallService">
-                        <label for="smallService"> Small</label><br>
-                    </div>  
-                    <div>
-                        <input type="checkbox" name="mediumService" value="mediumService">
-                        <label for="mediumService"> Medium</label><br>
-                    </div>
-                    <div>
-                        <input type="checkbox" name="largeService" value="largeService">
-                        <label for="largeService"> Large</label><br>
-                    </div>
-                </label>
-            </div>
-            
-            <div class="form-row">
-                <label>
-                    <span>Select your prefered organization size: </span><br>
-                    <input type="checkbox" name="smallOrg" value="smallOrg">
-                    <label for="smallOrg"> Small</label><br>
-                    <input type="checkbox" name="mediumOrg" value="mediumOrg">
-                    <label for="mediumOrg"> Medium</label><br>
-                    <input type="checkbox" name="largeOrg" value="largeOrg">
-                    <label for="largeOrg"> Large</label><br>
-                </label>
-            </div>
-
-            <div class="form-row">
-                <label>
-                    <span>Select your prefered role: </span><br>
-                    <input type="checkbox" name="cook" value="cook">
-                    <label for="cook"> Cook</label><br>
-                    <input type="checkbox" name="serve" value="serve">
-                    <label for="serve"> Serve</label><br>
-                    <input type="checkbox" name="prep" value="prep">
-                    <label for="prep"> Prep</label><br>
-                    <input type="checkbox" name="clean" value="clean">
-                    <label for="clean"> Clean</label><br>
-                </label>
-            </div>
-
-            <!-- <div class="form-row">  
-                <label>  
-                    <span>Select your prefered service size: </span>  
-                    <select name="service" class="select"> 
-                        <option disabled selected>select</option> 
-                        <option>small</option>  
-                        <option>medium</option>  
-                        <option>large</option>  
-                    </select>  
-                </label>  
-            </div>   
-  
-            <div class="form-row">  
-                <label>  
-                    <span>Select your prefered organization size: </span>  
-                    <select name="org" class="select">  
-                        <option disabled selected>select</option> 
-                        <option>small</option>  
-                        <option>medium</option>  
-                        <option>large</option>  
-                    </select>  
-                </label>  
-            </div>   -->
-  
-            <!-- <div class="form-row">  
-                <label>  
-                    <span>Select your prefered role: </span>  
-                    <select name="role" class="select">  
-                        <option disabled selected>select</option> 
-                        <option>cook</option>  
-                        <option>serve</option>  
-                        <option>prep</option>  
-                        <option>clean</option>  
-                    </select>  
-                </label>  
-            </div>     -->
-        
+            {{ prediction_text | safe }}
         </div>
-            
-        <button id="btn" type="submit" class="btn btn-primary btn-block btn-large">Submit</button>
-    </form>
-
-   <br>
-   <br>
-   {{ prediction_text | safe }}
-
- </div>
-
-
+    </div>
 </body>
 </html>
