--- a/templates/index.html
+++ b/templates/index.html
@@ -92,10 +92,11 @@
         
     </form>
 
-   <br>
-   <br>
-   {{ prediction_text | safe }}
-
+    <br>
+    <br>
+    <div class="output">
+        {{ prediction_text | safe }}
+    </div>  
  </div>
 
 
