--- a/templates/index.html
+++ b/templates/index.html
@@ -96,7 +96,7 @@
             </div>
             <br><br><br><br><br><br><br><br>
             <div>
-                <input id="btn" type="submit" value="Submit">
+                <button type="submit" class="btn btn-primary btn-block btn-large">Submit</button>
             </div>
         </form>
         <br><br>
